<resources>
    <string name="app_name">ProyectoFinal_Regalos</string>
    <string name="inicioentrar">Entrar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="pedidos">Pedidos</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total:</string>
    <string name="ofertas">Promociones del dia</string>
    <string name="pagar">Pagar</string>
    <string name="tipoPago">Elegir Metodo de pago</string>
    <string name="pagoTarjeta">Pagar con tarjeta</string>
    <string name="pagoLocal">Pagar en tienda</string>
    <string name="titularTarjeta">Nombre titular de la tarjeta</string>
    <string name="numTarjeta">Numero de la tarjeta</string>
    <string name="fechaExp">Fecha de Expiracion</string>
    <string name="confPago">Confirmar Pago</string>
    <string name="CCV">CCV</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="email">E-mail"</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="telecelu">Telefono / Celular"</string>
    <string name="registrar">Registrar</string>
    <string name="infoPago">Información del Usuario</string>
    <string name="ActInfo">Actualizar Información</string>
    <string name="VolverInicio">Volver al Inicio</string>
    <string name="PagoProcesado">Pago Procesado!</string>
    <string name="direccionText">Dirección</string>
    <string name="calleDirText">Calle</string>
    <string name="infoTarj">Información Tarjeta</string>
    <string name="numCasa">Numero de la Casa</string>
    <string name="ofertas_del_dia">Ofertas del día</string>
    <string name="descripcionCasa">Descripción de la Casa</string>
</resources>