<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel"
    android:orientation="vertical"
    tools:context=".InicioTienda">


    <ImageView
        android:id="@+id/logoHappyBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grupo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/jomhuria"
        android:text="@string/tipoPago"
        android:textColor="@color/rosa"
        android:textSize="46sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logoVisa"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:srcCompat="@drawable/logovisa" />

    <Button
        android:id="@+id/btn_pagoTarjeta"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:text="@string/pagoTarjeta"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btn_pagoTienda"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/pagoLocal"
        android:textSize="24dp" />

</LinearLayout>


