<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel"
    android:orientation="vertical"
    tools:context=".InicioTienda">

    <ImageView
        android:id="@+id/logoHappyBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grupo2" />

    <EditText
        android:id="@+id/et_nombretitular"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:fontFamily="@font/jomhuria"
        android:hint="@string/titularTarjeta"
        android:inputType="text"
        android:textSize="28dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <EditText
        android:id="@+id/et_numeroTarjeta"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:fontFamily="@font/jomhuria"
        android:hint="@string/numTarjeta"
        android:inputType="number"
        android:textSize="28dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_mes_expiracion"
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jomhuria"
            android:hint="Mes"
            android:inputType="number"
            android:textSize="28dp"
            android:maxLength="2"
            android:layout_marginStart="30dp"/>

        <EditText
            android:id="@+id/et_anio_expiracion"
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jomhuria"
            android:hint="Año"
            android:inputType="number"
            android:textSize="28dp"
            android:maxLength="2"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="70dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jomhuria"
            android:hint="@string/CCV"
            android:inputType="number"
            android:textSize="28dp"
            android:maxLength="4"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.719" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_confirmar_pago"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:fontFamily="@font/jomhuria"
        android:text="@string/confPago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />


</LinearLayout>
